# tnp

./: .gitignore  README.md  pyproject.toml  requirements.old.txt  requirements.txt  setup.py
deprec/: test.py  tnp_file.py
deprec/tests/: nnx_likelihood_test.py
deprec/tests/experiments/: test.py  test_data.py  test_data_synthetic.py
tnp/: .gitignore  __init__.py  nnx_train_script.py  old_nnx_train_script.py  run_hpc.sh  test_np_eqx.py  train_toy.py
tnp.egg-info/: PKG-INFO  SOURCES.txt
tnp/configs/: config.yaml
tnp/data/: base.py  gp.py  gp_redo.py  pabbo_data.py  simple_gp.py  synthetic.py  test_gpjax.py
tnp/models/: decoder.py  encoder.py  gp.py  layers.py  likelihood.py  neural_process.py  nnx_mod.py  nnx_test.py
tnp/models/eqx_models/: encoder.py  likelihood.py  neural_process.py
tnp/models/nnx/: likelihood.py  neural_process.py
tnp/models/nnx_models/: layers.py  likelihood.py  neural_process.py
