[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tnp"
version = "0.1.0"
description = "Transformer Neural Process"
authors = [
    {name = "Conor Hassan"}
]
readme = "README.md"
dependencies = []  # Core dependencies will come from requirements.txt